@@ -367,17 +367,17 @@ public class GameOptions extends AbstractOptions {
                                 break;
 
                             case IOption.BOOLEAN:
-                                tempOption.setValue(new Boolean(value
+                                tempOption.setValue(Boolean.valueOf(value
                                         .toString()));
                                 break;
 
                             case IOption.INTEGER:
-                                tempOption.setValue(new Integer(value
+                                tempOption.setValue(Integer.valueOf(value
                                         .toString()));
                                 break;
 
                             case IOption.FLOAT:
-                                tempOption.setValue(new Float(value
+                                tempOption.setValue(Float.valueOf(value
                                         .toString()));
                                 break;
                         }
